@@ -14,6 +14,7 @@ Revision history for Perl extension Geo::WeatherNWS.
     - Incorporate some changes provided by Guenter Knauf
       Added wind speed in kmh
     - Fix bug for handling conditions without modifiers
+    - Relax rules for ICAO names to allow numbers as well as letters for the last 3 characters
 
 1.041 Wed Nov 14 22:00:00 2012
     - Minor changes: removed unneeded /d after tr,
